bugfix: fix sider menu z-index

--- a/packages/umi-plugin-father-doc/src/themes/default/layout.less
+++ b/packages/umi-plugin-father-doc/src/themes/default/layout.less
@@ -247,6 +247,8 @@ body {
       left: -60%;
       box-shadow: 2px 0 8px rgba(0, 0, 0, 0.15);
       width: 60%;
+      // bigger then all antd z-index
+      z-index: 100;
       &-header {
         display: none;
       }
